--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <form action="#">
                 
                 <div class = "input-field"> 
-                    <input type="text" name = "username" id = "username" placeholder="Enter Your Username" autocomplete="off">
+                    <input type="text" name = "username" id = "username" placeholder="Enter Your Username" autocomplete="off" required>
                     <div class = "underline"></div> 
                 </div>
                 <div class = "input-field"> 
-                    <input type="password" name = "password" id = "password" placeholder="Enter Your Password">
+                    <input type="password" name = "password" id = "password" placeholder="Enter Your Password" required>
                     <div class = "underline"></div>
                 </div>
 
